# XBOX-Sign

./: .gitignore  .gitmodules
Hardware/Control Board/: Control Board.kicad_dru  Control Board.kicad_pcb  Control Board.kicad_pro  Control Board.kicad_sch  board2pdf_Fab_4L.config.ini  led_driver.kicad_sch
Hardware/Control Board/Mechanical/: Board Outline.dxf
Hardware/Control Board/Release/Reports/: DRC.txt
Hardware/Light Board - B/: Light Board - B.kicad_pcb  Light Board - B.kicad_pro  Light Board - B.kicad_sch  Release.kicad_jobset
Hardware/Light Board - B/Mechanical/: Board Outline.dxf  LED Placement.dxf
Hardware/Light Board - O/: Light Board - O.kicad_pcb  Light Board - O.kicad_pro  Light Board - O.kicad_sch
Hardware/Light Board - O/Mechanical/: Board Outline.dxf  LED Placement.dxf
Hardware/Light Board - Symbol/: Light Board - Symbol.kicad_pcb  Light Board - Symbol.kicad_pro  Light Board - Symbol.kicad_sch
Hardware/Light Board - Symbol/Mechanical/: Board Outline.dxf  LED Placement.dxf
Hardware/Light Board - X/: Light Board - X.kicad_pcb  Light Board - X.kicad_pro  Light Board - X.kicad_sch  Release.kicad_jobset  board2pdf_Fab_2L.config.ini
Hardware/Light Board - X/Mechanical/: Board Outline.dxf  LED Placement.dxf
Hardware/USB-C Board/: Release.kicad_jobset  USB-C Board.kicad_dru  USB-C Board.kicad_pcb  USB-C Board.kicad_pro  USB-C Board.kicad_sch
Software/: CMakeLists.txt
Software/include/: animation_base.h  animation_transistion.h  led.h  led_gamma_correction_table.h  led_transition_lut.h
Software/src/: animation_transistion.c  led.c  main.c
(+40 files in other folders)
